[gd_scene load_steps=10 format=3 uid="uid://bqhtleeec214i"]

[ext_resource type="Texture2D" uid="uid://blb83yl3fabim" path="res://assets/images/environment/room_exit.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bxb1cwgwittb3" path="res://assets/images/environment/door.png" id="2"]
[ext_resource type="Script" path="res://scenes/rooms/room_exit.gd" id="3"]
[ext_resource type="Script" path="res://addons/game_state_helper/game_state_helper.gd" id="4"]
[ext_resource type="Script" path="res://scenes/components/interaction/interactable_area_2d.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bc8pguj8qgijx" path="res://assets/images/environment/door_interact_indicator.png" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(100, 20)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(120, 21.141)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(100, 100)

[node name="RoomExit" type="StaticBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("3")

[node name="room_exit" type="Sprite2D" parent="."]
position = Vector2(0, -57.75)
texture = ExtResource("1")

[node name="door_interact_indicator" type="Sprite2D" parent="room_exit"]
visible = false
show_behind_parent = true
texture = ExtResource("6")

[node name="door" type="Sprite2D" parent="room_exit"]
visible = false
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("1")

[node name="ExitDetectArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -63.5678)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDetectArea"]
position = Vector2(0, 21.4541)
shape = SubResource("2")

[node name="PlayerEnterPosition" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="GameStateHelper" type="Node" parent="."]
script = ExtResource("4")
save_properties = Array[String](["locked"])

[node name="InteractableArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -50.9424)
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea2D"]
shape = SubResource("3")

[connection signal="body_entered" from="ExitDetectArea" to="." method="_on_ExitDetectArea_body_entered"]
[connection signal="InteractionIndicatorStateChanged" from="InteractableArea2D" to="." method="_on_InteractableArea2D_InteractionIndicatorStateChanged"]
[connection signal="InteractionStarted" from="InteractableArea2D" to="." method="_on_InteractableArea2D_InteractionStarted"]
